Enforce one open session per table in OpenTableSession
Add application-level guard to prevent opening a new TableSession when the
table already has an OPEN session.

- Extend TableSessionRepository with existsOpenByTableId(tableId)
- Throw TableAlreadyHasOpenSessionException on violation
- Update OpenTableSessionHandler to enforce rule before creating a session
- Add unit tests for allow/reject paths and clean up list access