@@ -1,9 +1,12 @@
 package com.nenkov.bar.application.session.handler;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import com.nenkov.bar.application.common.config.ApplicationCurrency;
+import com.nenkov.bar.application.session.exception.TableAlreadyHasOpenSessionException;
 import com.nenkov.bar.application.session.model.OpenTableSessionInput;
 import com.nenkov.bar.application.session.model.OpenTableSessionResult;
 import com.nenkov.bar.application.session.repository.TableSessionRepository;
@@ -25,15 +28,16 @@ final class OpenTableSessionHandlerTest {
   @Captor private ArgumentCaptor<TableSession> sessionCaptor;
 
   @Test
-  void handle_persistsOpenSessionWithEurEmptyState_andReturnsIds() {
+  void handle_whenNoOpenSession_persistsOpenSession_andReturnsIds() {
     OpenTableSessionHandler handler =
         new OpenTableSessionHandler(tableSessionRepository, new ApplicationCurrency("EUR"));
 
     OpenTableSessionInput input = new OpenTableSessionInput("T-12");
 
+    when(tableSessionRepository.existsOpenByTableId("T-12")).thenReturn(false);
+
     OpenTableSessionResult result = handler.handle(input);
 
-    // persists exactly one new session
     verify(tableSessionRepository).save(sessionCaptor.capture());
     TableSession saved = sessionCaptor.getValue();
 
@@ -49,24 +53,43 @@ final class OpenTableSessionHandlerTest {
     assertThat(saved.itemWriteOffs()).isEqualTo(List.of());
     assertThat(saved.sessionWriteOffs()).isEqualTo(List.of());
 
-    // returns identifiers needed by caller
     assertThat(result.sessionId()).isEqualTo(saved.id().value());
     assertThat(result.tableId()).isEqualTo("T-12");
   }
 
   @Test
-  void handle_generatesNewSessionIdEveryTime() {
+  void handle_whenTableAlreadyHasOpenSession_throws_andDoesNotSave() {
     OpenTableSessionHandler handler =
         new OpenTableSessionHandler(tableSessionRepository, new ApplicationCurrency("EUR"));
+
+    OpenTableSessionInput input = new OpenTableSessionInput("T-1");
+    when(tableSessionRepository.existsOpenByTableId("T-1")).thenReturn(true);
+
+    Throwable thrown =
+        org.junit.jupiter.api.Assertions.assertThrows(
+            TableAlreadyHasOpenSessionException.class, () -> handler.handle(input));
+
+    assertThat(thrown.getMessage()).contains("Table already has an open session: T-1");
+
+    verify(tableSessionRepository, never()).save(org.mockito.ArgumentMatchers.any());
+  }
+
+  @Test
+  void handle_generatesNewSessionIdEveryTime_whenTableHasNoOpenSession() {
+    OpenTableSessionHandler handler =
+        new OpenTableSessionHandler(tableSessionRepository, new ApplicationCurrency("EUR"));
+
+    when(tableSessionRepository.existsOpenByTableId("T-1")).thenReturn(false);
+
     handler.handle(new OpenTableSessionInput("T-1"));
     handler.handle(new OpenTableSessionInput("T-1"));
 
     verify(tableSessionRepository, org.mockito.Mockito.times(2)).save(sessionCaptor.capture());
 
-    java.util.List<TableSession> saved = sessionCaptor.getAllValues();
+    List<TableSession> saved = sessionCaptor.getAllValues();
     assertThat(saved).hasSize(2);
 
-    String firstId = saved.get(0).id().value();
+    String firstId = saved.getFirst().id().value();
     String secondId = saved.get(1).id().value();
 
     assertThat(firstId).isNotBlank();
